@@ -1,3 +1,8 @@
+2009-09-08  Cary Coutant  <ccoutant@google.com>
+
+	* testsuite/Makefile.am (MOSTLYCLEANFILES): Add more generated files.
+	* testsuite/Makefile.in: Regenerate.
+
 2009-09-11  Nick Clifton  <nickc@redhat.com>
 
 	* po/gold.pot: Updated by the Translation project.
